--- a/.env-examples
+++ b/.env-examples
@@ -1,2 +1,4 @@
 // DB_URI - MongoDB url connection
 // SECRET_KEY - JWT token secret key
+// GRID_API_KEY - GRID api connection
+// BASE_URL - Base url for website
